--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "linkcheckmd>=1.4.0",
     "mkdocs>=1.6.1",
+    "mkdocs-literate-nav>=0.6.2",
     "mkdocs-pagetree-plugin>=0.0.17",
     "mkdocs-print-site-plugin>=2.7.3",
     "mkdocs-ultralytics-plugin>=0.1.25",
